Importacion de librerias

--- a/[NRC_6292] JeffersonGuaman_Lab1-checkpoint.ipynb
+++ b/[NRC_6292] JeffersonGuaman_Lab1-checkpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57982909",
+   "id": "668e68d3",
    "metadata": {},
    "source": [
     "# Support Vector Machine (SVM)"
@@ -10,18 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ac1d4e30",
+   "execution_count": 2,
+   "id": "96fa5dc3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Primero se importar los módulos necesarios para el desarrollo el algoritmo de SVM'''\n",
+    "'''Primero se importan los módulos necesarios para el desarrollo del algoritmo SVM'''\n",
     "\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import svm\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "import pandas as pd\n",
+    "import seaborn as sn\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e589c879",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
